name:                tmi
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

executable tmi
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       V, Veq, Storage, Ty, Util, Propagate, Lift, Flags, Lens, Lib, Old, TMI, Recon, VReadShow, H, Runtime, CoatCheck, ExtRunner,
                       NiceMap, VNiceMap, Parr, Tracer, Veb, Srv, Imp
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring
                     , containers
                     , contravariant
                     , deepseq
                     , directory
                     , cryptohash-md5
                     , http-types
                     , firefly
                     , mtl
                     , pretty-simple
                     , random
                     , text
                     , time
                     , unix
                     , utf8-string
                     , wai

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Tests.hs
  other-modules:       V, Veq, Storage, Ty, Util, Propagate, Lift, Flags, Lens, Lib, Old, TMI, Recon, VReadShow, H, Runtime
                       Innards, TestUtil, CoatCheck, ExtRunner, NiceMap, VNiceMap, Parr, Tracer
                     , Innards
  build-depends:       base >= 4.8
                     , QuickCheck
                     , containers
                     , deepseq
                     , directory
                     , mtl
                     , pretty-simple
                     , random
                     , tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , text
                     , time
