name:                tmi
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

--Library pa
  --C-sources: src/nonblocking.c

-- Flag llvm
--   Description:  Compile via LLVM. This produces much better object code
--                 but your GHC needs to have been built against the LLVM compiler.

--   Default:      False

executable tmi
  hs-source-dirs:      src, test
  main-is:             Main.hs
  other-modules:       Util, Val, Eval, Env, Interp, Builtin, StdLib, Pretty, Case, Awkward, Adt
  -- other-modules:       Util, External, Aubio, Sound, Resample, Search, Download, Memoize, Analysis, ISO8601Duration, AesonHelpers, Spleeter, Arrangement, Mess, Feh, Affinity, Constants, Graph,
  --                      Looper, Zipper, FX, Score, Dice, Gui, FPS, State, Ascii, Bars, Viz, Diag, History, SaveLoad, Loop, Animate, Gfx, Hypercube
  --ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"

  ghc-options:
        -O2
        -threaded
        -with-rtsopts=-N

  --ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -sstderr"
  default-language:    Haskell2010
  --extra-libraries:     nonblocking.o
  -- c-sources:           src/nonblocking.c
  build-depends:       base,
                       containers,
                       deepseq,
                       --hsndfile,
                       --hsndfile-storablevector,
                       pretty-simple,
                       QuickCheck,
                       random,
                       tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , text,
                       time

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Tests.hs
  other-modules:       TestUtil, ValTests, CaseTests, StdLibTests, EnvTests
                       Util, Val, Eval, Env, Interp, Builtin, StdLib, Pretty, Case, Awkward, Adt
  build-depends:       base,
                       containers,
                       deepseq,
                       --hsndfile,
                       --hsndfile-storablevector,
                       pretty-simple,
                       QuickCheck,
                       random,
                       tasty
                     , tasty-quickcheck
                     , tasty-hunit
                     , text,
                       time
